# video-archive

./: .editorconfig  LICENSE  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  setup.cfg
config/: .env.template  .env_secret.template
docker/: docker-compose.prod.yml
docker/application/: Dockerfile  entrypoint.sh  uwsgi.sh
docker/application/celery/: monitoring.sh  worker.sh  worker_helthcheck.sh
docker/nginx/: Dockerfile
docker/nginx/conf/: nginx.conf
docker/rabbitmq/: Dockerfile
docker/rabbitmq/conf/: definitions.json  rabbitmq.conf
docker/reverseproxy/: Dockerfile
docker/reverseproxy/conf/: reverseproxy.conf
k8s/: celery-workers-deployment.yaml  config--env-configmap.yaml  db-deployment.yaml  db-service.yaml  django-locale-persistentvolumeclaim.yaml  mdbdata-persistentvolumeclaim.yaml  nginx-deployment.yaml  nginx-ingress.yaml  nginx-service.yaml  proxynet-networkpolicy.yaml  rabbitmq-deployment.yaml  rabbitmq-ingress.yaml  rabbitmq-service.yaml  web-deployment.yaml  web-service.yaml
project/: celery.py  urls.py  wsgi.py
project/apps/video_archive/: admin.py  apps.py  encoding_backends.py  forms.py  models.py  tasks.py  urls.py  views.py
project/apps/video_archive/migrations/: 0001_initial.py
project/settings/: __init__.py
project/settings/components/: __init__.py  celery.py  common.py  logging.py  video_encoding.py
project/settings/environments/: development.py  production.py
tests/: conftest.py
tests/test_apps/test_video_archive/test_models/: test_video_archive_model.py
tests/test_project/: test_urls.py
(+9 files in other folders)
